Begin main app defintions

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
   </head>
-  <body ng-app="F1FeederApp">
+  <body ng-app="PayByPhoneApp">
     <ng-view></ng-view>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
