--- a/app/index.html
+++ b/app/index.html
@@ -12,28 +12,28 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
   </head>
-  <body ng-app="PayByPhoneApp">
+  <body ng-app="EventBaseApp">
     <div class="container-fluid">
       <div class="page-header">
-        <h1>Hello paybyphone <small>Let's play with the Marvel comics API and angular</small></h1>
+        <h1>Hello eventbase <small></small></h1>
       </div>
-
+      <div>
+        <a href="/#/overview">Overview</a>
+        <a href="/#/schedule">Schedule</a>
+      </div>
       <ng-view></ng-view>
     </div>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
 
-    <script src="js/marvel_characters/module.js"></script>
-    <script src="js/marvel_characters/details/factory.js"></script>
-    <script src="js/marvel_characters/details/controllers.js"></script>
-    <script src="js/marvel_characters/list/factory.js"></script>
-    <script src="js/marvel_characters/list/controllers.js"></script>
+    <script src="js/overview/module.js"></script>
+    <script src="js/overview/factory.js"></script>
+    <script src="js/overview/controller.js"></script>
+
+    <script src="js/schedule/module.js"></script>
+    <script src="js/schedule/factory.js"></script>
+    <script src="js/schedule/controller.js"></script>
 
     <script src="js/app.js"></script>
-
-    <script type="text/javascript">
-      window.MARVEL_KEY = "3de04631c097db314166c09803370b6e"
-    </script>
-
   </body>
 </html>
